ModernDayTech Autonomous Perception System: Official Production Release v1.0